--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "country-management",
+    "name": "covid-19",
     "version": "1.0.0",
     "description": "Salpo  Web Application",
     "main": "index.js",
