--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "covid-19",
     "version": "1.0.0",
-    "description": "Salpo  Web Application",
+    "description": "Covid 19 front end",
     "main": "index.js",
     "engines": {
         "node": ">=12.14.1",
@@ -19,8 +19,7 @@
     "keywords": [
         "react",
         "react-redux",
-        "react",
-        "boilerplate"
+        "react"
     ],
     "author": "SugathChaminda",
     "license": "ISC",
